sas-core/main/default/objects/Messaging_Allowed_Market__mdt/Messaging_Allowed_Market__mdt.object-meta.xml
<CustomObject>
    <label>Messaging Allowed Market</label>
    <pluralLabel>Messaging Allowed Markets</pluralLabel>
</CustomObject>