sas-core/main/default/objects/Messaging_Allowed_Market__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>