sas-core/main/default/objects/Messaging_Allowed_Market__mdt/fields/Phone_Start_With__c.field-meta.xml
<CustomField>
    <fullName>Phone_Start_With__c</fullName>
    <label>Phone Start With</label>
    <length>20</length>
    <type>Text</type>
</CustomField>