sas-core/main/default/objects/Messaging_Allowed_Market__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>